tests/fixtures/multi_module/valid/linear_chain/analytics.furqan
bismillah Analytics {
    authority: NAMING_MD
    serves: purpose_hierarchy.balance_for_living_systems
    scope: analyze
    not_scope: nothing_excluded
}

tanzil analytics_deps {
    depends_on: DataLoader
}

fn placeholder() -> Integrity {
    return Integrity
}
