tests/fixtures/multi_module/invalid/transitive_type/middle.furqan
bismillah Middle {
    authority: NAMING_MD
    serves: purpose_hierarchy.balance_for_living_systems
    scope: passthrough
    not_scope: nothing_excluded
}

tanzil middle_deps {
    depends_on: Base
}

fn passthrough() -> Integrity {
    return Integrity
}
